[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skybolt"
version = "3.4.0"
description = "High-performance asset caching for multi-page applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jens Roland", email = "mail@jensroland.com" }
]
keywords = [
    "assets",
    "caching",
    "service-worker",
    "performance",
    "vite"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/JensRoland/skybolt-python"
Issues = "https://github.com/JensRoland/skybolt-python/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skybolt"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
